# llm-conceptual-modeling

./: --result-json  .dockerignore  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  experiment_manifest_schema.yaml  generate_variance_decomposition.py  lcm  pyproject.toml  qwen-mistral-remote-ops-handoff.md  qwen_algo1_only.yaml
configs/: hf_transformers_algo2_mistral.yaml  hf_transformers_algo2_olmo.yaml  hf_transformers_algo2_qwen.yaml  hf_transformers_algo3_mistral.yaml  hf_transformers_algo3_olmo.yaml  hf_transformers_algo3_qwen.yaml  hf_transformers_open_weight_map_extension.yaml  hf_transformers_paper_batch.yaml
data/: AGENTS.md  README.md
docker/: vast-gpu.Dockerfile
docs/: AGENTS.md  README.md  algo1-method1-guide.md  algo1-minimax-preflight.yaml  algo2-method2-guide.md  algo3-method3-guide.md  architecture.md  huggingface-dataset-README.md  onboarding.md  open-weight-map-extension-decision.md  open-weight-map-extension-runbook.md  post-revision-debug.md  replication-sufficiency-decision.md  reviewer-guide.md  revision-summary-compact.md  revision-summary.md  tech-debt-day-guide.md  variance-decomposition.md  vast-ai-transformers.md
paper/: agent-onboarding.md
scripts/: AGENTS.md  package_osf_artifacts.py
tests/: AGENTS.md  test_algo1_cove.py  test_algo1_experiment.py  test_algo1_experiment_runner.py  test_algo1_method.py  test_algo1_mistral.py  test_algo1_probe.py  test_algo2_embeddings.py  test_algo2_expansion.py  test_algo2_experiment.py  test_algo2_mistral.py  test_algo2_probe.py  test_algo2_thesaurus.py  test_cli.py  (+33 more)
(+11982 files in other folders)
