[project]
name = "llm-conceptual-modeling"
version = "0.1.0"
description = "Offline, testable rewrite of the conceptual modeling research codebase."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "networkx>=3.5",
  "pandas>=2.3.2",
  "scipy>=1.16.2",
]

[project.scripts]
lcm = "llm_conceptual_modeling.cli:run"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.12.0",
  "ty>=0.0.1a13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
